# ora

./: .dockerignore  .gitattribute  .gitignore  .gitmodules  API.md  COMPILER_REVIEW.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEBUGGER.md  Dockerfile  DoubleCheck.md  GRAMMAR.bnf  GRAMMAR.ebnf  HIR_SPEC.md  QUALITY_ONGOING_REVIEW.md  README.md  RELEASE_CHECKLIST.md  V2_RELEASE_REPORT.md  arithmetic_signed_test.ora  build.zig  build.zig.zon  clean_preMLIR.md  encoder.md  ora_overflows.md  run-all-tests.sh  setup.sh  simple_token_basic.hir.json  syntax-guide.md  test_erc20.hir.json  todo.md  tuple_basics.smt.report.json  tuple_basics.smt.report.md  v0.2.md  validate_mlir.sh
lib/evm/: CHANGES.md  COMMANDS.md  Cargo.toml  DEBUGGER_PLAN.md  KEYBINDINGS.md  LICENSE  README.md  a3-snapshot-stepback-plan.md  b2-inliner-plan.md  build.zig  build.zig.zon  debug-a-failing-transaction.md  getting-started.md  tui-3col-redesign-plan.md
lib/evm/src/: access_list_manager.zig  bytecode.zig  call_params.zig  call_result.zig  debug_abi.zig  debug_breakpoint.zig  debug_controller.zig  debug_dap.zig  debug_eval.zig  debug_info.zig  debug_overlay.zig  debug_probe.zig  debug_session.zig  debug_tui.zig  debug_tui_draw.zig  debug_tui_session.zig  debugger.zig  debugger_test.zig  errors.zig  evm.zig  evm_config.zig  evm_test.zig  frame.zig  host.zig  jsonrpc.zig  logger.zig  opcode.zig  precompiles.zig  primitives.zig  root.zig  source_map.zig  storage.zig  trace.zig
lib/evm/src/crypto/: blake2f.zig  bls12_381.zig  bls12_381_wrapper.rs  bn254.zig  kzg_setup.zig  modexp.zig  point_evaluation.zig  ripemd160.zig  secp256k1.zig
lib/evm/src/crypto/bn254/: Fp12Mont.zig  Fp2Mont.zig  Fp4Mont.zig  Fp6Mont.zig  FpMont.zig  Fr.zig  G1.zig  G2.zig  NAF.zig  curve_parameters.zig  pairing.zig
lib/evm/src/instructions/: dispatcher.zig  handlers_arithmetic.zig  handlers_arithmetic_test.zig  handlers_bitwise.zig  handlers_bitwise_test.zig  handlers_block.zig  handlers_block_test.zig  handlers_comparison.zig  handlers_comparison_test.zig  handlers_context.zig  handlers_context_test.zig  handlers_control_flow.zig  handlers_control_flow_test.zig  handlers_keccak.zig  handlers_keccak_test.zig  handlers_log.zig  handlers_log_test.zig  handlers_memory.zig  handlers_memory_test.zig  handlers_stack.zig  handlers_stack_test.zig  handlers_storage.zig  handlers_storage_test.zig  handlers_system.zig  handlers_system_test.zig  test_helpers.zig  test_helpers_examples.test.zig
lib/evm/test/bench/: step_bench.zig
lib/evm/test/specs/: assembler.zig  client_blockchain.zig  root.zig  runner.zig  test_host.zig
lib/evm/test/specs/generated_state/stAttackTest/: ContractCreationSpamFiller.zig  CrashingTransactionFiller.zig
lib/evm/test/specs/generated_state/stBadOpcode/: eip2315NotRemovedFiller.zig
lib/evm/test/specs/generated_state/stBugs/: randomStatetestDEFAULT-Tue_07_58_41-15153-575192Filler.zig  randomStatetestDEFAULT-Tue_07_58_41-15153-575192_londonFiller.zig  returndatacopyPythonBug_Tue_03_48_41-1432Filler.zig  staticcall_createfailsFiller.zig
lib/evm/test/specs/generated_state/stCallCodes/: call_OOG_additionalGasCosts1Filler.zig  call_OOG_additionalGasCosts2Filler.zig  callcall_00Filler.zig  callcall_00_OOGEFiller.zig  callcall_00_OOGE_valueTransferFiller.zig  callcall_00_SuicideEndFiller.zig  callcallcall_000Filler.zig  callcallcall_000_OOGEFiller.zig  callcallcall_000_OOGMAfterFiller.zig  callcallcall_000_OOGMBeforeFiller.zig  callcallcall_000_SuicideEndFiller.zig  callcallcall_000_SuicideMiddleFiller.zig  callcallcall_ABCB_RECURSIVEFiller.zig  callcallcallcode_001Filler.zig  callcallcallcode_001_OOGEFiller.zig  callcallcallcode_001_OOGMAfterFiller.zig  callcallcallcode_001_OOGMBeforeFiller.zig  callcallcallcode_001_SuicideEndFiller.zig  callcallcallcode_001_SuicideMiddleFiller.zig  callcallcallcode_ABCB_RECURSIVEFiller.zig  callcallcode_01Filler.zig  callcallcode_01_OOGEFiller.zig  callcallcode_01_SuicideEndFiller.zig  callcallcodecall_010Filler.zig  callcallcodecall_010_OOGEFiller.zig  callcallcodecall_010_OOGMAfterFiller.zig  callcallcodecall_010_OOGMBeforeFiller.zig  callcallcodecall_010_SuicideEndFiller.zig  callcallcodecall_010_SuicideMiddleFiller.zig  callcallcodecall_ABCB_RECURSIVEFiller.zig  callcallcodecallcode_011Filler.zig  callcallcodecallcode_011_OOGEFiller.zig  callcallcodecallcode_011_OOGMAfterFiller.zig  callcallcodecallcode_011_OOGMBeforeFiller.zig  callcallcodecallcode_011_SuicideEndFiller.zig  callcallcodecallcode_011_SuicideMiddleFiller.zig  callcallcodecallcode_ABCB_RECURSIVEFiller.zig  callcodeDynamicCode2SelfCallFiller.zig  callcodeDynamicCodeFiller.zig  callcodeEmptycontractFiller.zig  (+39 more)
lib/evm/test/specs/generated_state/stCallCreateCallCodeTest/: Call1024BalanceTooLowFiller.zig  Call1024OOGFiller.zig  Call1024PreCallsFiller.zig  CallLoseGasOOGFiller.zig  CallRecursiveBombPreCallFiller.zig  Callcode1024BalanceTooLowFiller.zig  Callcode1024OOGFiller.zig  CallcodeLoseGasOOGFiller.zig  callOutput1Filler.zig  callOutput2Filler.zig  callOutput3FailFiller.zig  callOutput3Filler.zig  callOutput3partialFiller.zig  (+30 more)
lib/evm/zig-pkg/z_ens_normalize-0.0.0-Iv6nMI2_AgCrLtEnZZnoeP87kZtP-36iIWzj3cD3v-vd/: build.zig  build.zig.zon
lib/evm/zig-pkg/z_ens_normalize-0.0.0-Iv6nMI2_AgCrLtEnZZnoeP87kZtP-36iIWzj3cD3v-vd/src/: root_c.zig
src/mlir/IR/: CMakeLists.txt
src/mlir/IR/include/: EthIRDialect.h  EthIROps.h  EthIRTypes.h  SIRDialect.h  SIROps.h  SIRTypes.h
src/mlir/IR/lib/: EthIRDialect.cpp  EthIRTypes.cpp  SIRDialect.cpp  SIRTypes.cpp
src/mlir/IR/td/: EthIRDialect.td  EthIROps.td  EthIRTypes.td  SIRDialect.td  SIROps.td  SIRTypes.td
src/mlir/ora/: CMakeLists.txt
src/mlir/ora/include/: OraDebug.h  OraDialectC.h  OraGasConstants.h
src/mlir/ora/lib/: OraCAPI.cpp  OraDebug.cpp  OraDialect.cpp
src/mlir/ora/lowering/OraToSIR/: OraMaterializationKinds.h  OraToSIR.cpp  OraToSIR.h  OraToSIRTypeConverter.cpp  OraToSIRTypeConverter.h  SIRDispatcher.cpp  SIRTextEmitter.cpp  SIRTextEmitter.h  SIRTextLegalizer.cpp
src/mlir/ora/td/: OraAttributes.td  OraDialect.td  OraOps.td  OraOpsMinimal.td  OraTypes.td
(+5816 files in other folders)
