[package]
name = "ora-evm-crypto"
version = "0.1.0"
edition = "2021"

[lib]
name = "ora_evm_crypto_wrappers"
crate-type = ["staticlib"]
path = "src/crypto/bls12_381_wrapper.rs"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
